tests/asm-link/null-outside-string/rgbasm.err
error: unexpected character after line continuation
   ╭─[ test.asm:3:9 ]
   │
 3 │     DEF foo\0qux EQU 42
   │            ┬  
   │            ╰── there can only be whitespace between this backslash and the end of the line
───╯
error: syntax error: unexpected number
   ╭─[ test.asm:3:10 ]
   │
 3 │     DEF foo\0qux EQU 42
   │             ┬  
   │             ╰── expected "(", "=", "+=", "-=", "*=", "/=", "%=", ...11 others
───╯
error: unexpected character after line continuation
   ╭─[ test.asm:4:8 ]
   │
 4 │     db foo\0qux
   │           ┬  
   │           ╰── there can only be whitespace between this backslash and the end of the line
───╯
error: syntax error: unexpected number
   ╭─[ test.asm:4:9 ]
   │
 4 │     db foo\0qux
   │            ┬  
   │            ╰── expected ",", "::", "(", "+", "-", "*", "/", ...20 others
───╯
error: unexpected character after line continuation
   ╭─[ test.asm:6:10 ]
   │
 6 │     DEF spam\Xeggs EQU 69
   │             ┬  
   │             ╰── there can only be whitespace between this backslash and the end of the line
───╯
error: syntax error: unexpected identifier
   ╭─[ test.asm:6:11 ]
   │
 6 │     DEF spam\Xeggs EQU 69
   │              ──┬──  
   │                ╰──── expected "(", "=", "+=", "-=", "*=", "/=", "%=", ...11 others
───╯
error: unexpected character after line continuation
   ╭─[ test.asm:7:9 ]
   │
 7 │     db spam\Xeggs
   │            ┬  
   │            ╰── there can only be whitespace between this backslash and the end of the line
───╯
error: syntax error: unexpected identifier
   ╭─[ test.asm:7:10 ]
   │
 7 │     db spam\Xeggs
   │             ──┬──  
   │               ╰──── expected ",", "::", "(", "+", "-", "*", "/", ...20 others
───╯
8 errors generated.
